✨ Ajout d'un objet Restaurant